Collision shape of rigid bodies changes inadvertently #43611

Closed
opened 2015-02-09 16:06:57 +01:00 by Fabian Emmes · 5 comments

System Information
Windows 8.1, Intel I5, Sandy Bridge, HD Graphics 2000

Blender Version
Broken: 2.73a

Short description of error
When changing scenes, collision shape of some rigid bodies changes to BOX shape.

Exact steps for others to reproduce the error

  1. Open collision_shape.blend.
  2. Make sure you see stdout of blender to see the assertion failing. (i.e., Toggle System Console on Windows)
  3. Press "Run Script" on "test.py" opened in the Text Editor.
  4. Notice that the assertion on line 10 fails. (The rigid body changed its collision shape inadvertently, while changing scenes.)
**System Information** Windows 8.1, Intel I5, Sandy Bridge, HD Graphics 2000 **Blender Version** Broken: 2.73a **Short description of error** When changing scenes, collision shape of some rigid bodies changes to BOX shape. **Exact steps for others to reproduce the error** 1. Open [collision_shape.blend](https://archive.blender.org/developer/F142111/collision_shape.blend). 2. Make sure you see stdout of blender to see the assertion failing. (i.e., Toggle System Console on Windows) 3. Press "Run Script" on "test.py" opened in the Text Editor. 4. Notice that the assertion on line 10 fails. (The rigid body changed its collision shape inadvertently, while changing scenes.)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @der_fab

Added subscriber: @der_fab

This issue was referenced by 6971bd9a4f

This issue was referenced by 6971bd9a4fbb744386a5ab781172532d0aa4d4c6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6971bd9a4f.

Closed by commit 6971bd9a4f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43611
No description provided.